syntax = "proto3";

package hwscGrpcSampleSvc;

option go_package = "hwscGrpcSampleSvcPb";

// The SampleService service definition.
service SampleService {
    // Sends a greeting
    rpc SayHello (SampleServiceRequest) returns (SampleServiceResponse) {
    }
}

// The SampleService request message containing the user's name.
message SampleServiceRequest {
    string first_name = 1;
    int64 create_timestamp = 2;
}

// The SampleService response message containing the greetings.
message SampleServiceResponse {
    string message = 1;
    int64 response_timestamp = 2;
}
